--- a/zhuye.html
+++ b/zhuye.html
@@ -203,7 +203,7 @@
       </div>
     </div>
     <div class="footer">
-      © 2025 WDL New Academic 学术论文智能检索平台 | 北京某某千帆科技有限公司
+      © 2025 WDL New Academic 学术论文智能检索平台 | 北京盈科千信科技有限公司
     </div>
   </div>
 </body>
