--- a/xaingqing.html
+++ b/xaingqing.html
@@ -411,7 +411,7 @@
       <a class="show-all" id="showAbsBtn" href="javascript:void(0);" onclick="toggleAbs()">全部摘要</a>
     </div>
 
-    <!-- 被引用情况/相关文章Tab -->
+    <!-- 被引用情况/参考文献Tab -->
     <div class="tabs-card">
       <div class="tabs-bar">
         <button id="tabCited" class="tab-active" onclick="showTab('cited')">被引用情况</button>
