--- a/xaingqing.html
+++ b/xaingqing.html
@@ -415,7 +415,7 @@
     <div class="tabs-card">
       <div class="tabs-bar">
         <button id="tabCited" class="tab-active" onclick="showTab('cited')">被引用情况</button>
-        <button id="tabRelated" onclick="showTab('related')">相关文章</button>
+        <button id="tabRelated" onclick="showTab('related')">参考文献</button>
       </div>
       <div class="tabs-panel" id="panelCited">
         <ul>
