--- a/zhuye.html
+++ b/zhuye.html
@@ -1,210 +1,258 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <title>WDL 学术论文智能检索</title>
-  <meta name="viewport" content="width=1280" />
+  <meta charset="UTF-8">
+  <title>新学术全球学位论文精选整合服务平台</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { margin: 0; background: #f3f8fe; font-family: 'PingFang SC', 'Microsoft Yahei', Arial, sans-serif; }
-    .header { display: flex; align-items: center; height: 58px; padding: 0 48px 0 24px; }
-    .logo { height: 38px; width: 38px; margin-right: 10px; object-fit: contain;}
-    .logo-text { color: #1677ff; font-weight: bold; font-size: 24px; margin-right: 8px;}
-    .logo-desc { color: #b5c7e3; font-size: 15px; margin-left: 7px;}
-    .school-list-btn {
-      background: #1677ff; color: #fff; border: none; border-radius: 7px;
-      padding: 5px 16px; font-size: 13px; cursor: pointer;
-      float: right; margin-left: auto; margin-top: 3px;
-    }
-    .main { min-height: 700px; display: flex; flex-direction: column; align-items: center; }
-    .title { margin-top: 28px; font-size: 32px; font-weight: 700; color: #1677ff; letter-spacing: 1.2px; text-align: center;}
-    .subtitle { margin-top: 8px; font-size: 14px; color: #666; letter-spacing: 1px; text-align: center; margin-bottom: 24px;}
-    .main-card {
-      background: #fff;
-      border-radius: 18px;
-      box-shadow: 0 6px 26px rgba(22,119,255,0.07);
-      width: 920px; max-width: 98vw;
-      margin: 0 auto 34px auto;
-      padding: 0 0 32px 0;
-      display: flex; flex-direction: column; align-items: center;
+    html, body { height: 100%; margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      min-height: 100vh;
+      font-family: 'Segoe UI', '微软雅黑', Arial, sans-serif;
+      background: linear-gradient(135deg, #eaf3fb 0%, #d4e3f7 100%);
       position: relative;
-      min-height: 530px;
-      /* 让主框体居中（与参考红框对齐） */
+      overflow-x: hidden;
     }
-    .card-tab-row {
-      display: flex; align-items: center; gap: 24px;
-      justify-content: center;
-      width: 100%; padding-top: 22px;
+    .center-main {
+      width: 100vw;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding-top: 110px;
+      padding-bottom: 80px;
     }
-    .main-tab {
-      font-size: 15px; font-weight: 500; border: none; outline: none; color: #1677ff; background: #f4f8ff; border-radius: 16px;
-      padding: 5px 24px; cursor: pointer; transition: background 0.13s, color 0.1s; letter-spacing: 0.5px;
+    .product-title {
+      font-size: 2.5rem;
+      font-weight: bold;
+      color: #2468ad;
+      text-align: center;
+      letter-spacing: 0.06em;
+      margin-bottom: 10px;
+      user-select: none;
+      width: 900px;
+      max-width: 96vw;
+      line-height: 1.25;
+      text-shadow: 0 2px 16px rgba(84, 153, 255, 0.05);
+      background: none;
     }
-    .main-tab.active, .main-tab:hover {
-      background: linear-gradient(90deg, #1677ff 0%, #69b5ff 100%);
-      color: #fff; box-shadow: 0 2px 8px 0 rgba(22,119,255,0.10);
+    .product-desc {
+      font-size: 1.22rem;
+      color: #4882b7;
+      text-align: center;
+      margin-bottom: 60px;
+      letter-spacing: 0.01em;
+      font-weight: 400;
+      user-select: none;
+      width: 900px;
+      max-width: 96vw;
+      line-height: 1.5;
+      background: none;
     }
-    .mode-btn-row {
-      display: flex; gap: 12px;
-      width: 97%; margin: 24px auto 0 auto;
-      justify-content: flex-end;
+    .input-area-wrap {
+      width: 900px;
+      max-width: 96vw;
+      position: relative;
+      margin-bottom: 60px;
+      min-height: 260px;
+    }
+    .mode-switch-row {
+      position: absolute;
+      top: -62px;
+      right: 0;
+      display: flex;
+      gap: 0;
+      z-index: 2;
     }
     .mode-btn {
-      font-size: 13px; border: none; border-radius: 7px; padding: 3px 15px;
-      background: #f4f8ff; color: #1677ff; cursor: pointer;
-      transition: background .13s, color .11s;
-    }
-    .mode-btn.active, .mode-btn:hover {
-      background: #1677ff; color: #fff;
-    }
-    /* 浅蓝色检索区 */
-    .search-block {
-      width: 94%; min-height: 126px;
-      margin: 0 auto 0 auto;
-      background: #f0f6fe;
-      border-radius: 15px;
+      font-size: 1.14rem;
+      padding: 9px 34px;
+      border: none;
+      border-radius: 16px 16px 0 0;
+      background: #f2f6fa;
+      color: #3281e6;
+      font-weight: 500;
+      cursor: pointer;
+      transition: background 0.18s, color 0.18s, box-shadow 0.18s;
+      letter-spacing: 0.01em;
+      outline: none;
       position: relative;
-      display: flex; flex-direction: column; align-items: stretch;
-      margin-top: 16px;
+      box-shadow: 0 1.5px 0 #e8f1fa inset;
+      margin-left: -2px;
     }
-    .search-area {
-      width: 100%; height: 100%;
-      position: relative;
-      padding: 28px 34px 38px 34px;
-      min-height: 90px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
+    .mode-btn.selected {
+      background: linear-gradient(90deg, #318ffb 70%, #6fc7ff 100%);
+      color: #fff;
+      font-weight: bold;
+      box-shadow: 0 4px 16px 0 rgba(38,127,255,0.11);
+      border-radius: 18px 18px 0 0;
+      z-index: 2;
     }
-    .search-icon { font-size: 22px; margin-right: 13px; color: #1677ff; margin-top: 6px;}
-    .search-input {
-      border: none; outline: none; background: transparent; font-size: 15px; flex: 1;
-      margin-right: 8px; color: #222; padding: 15px 0 12px 0; min-height: 32px;
-      min-width: 300px; max-width: 100%; resize: none; line-height: 1.65; font-family: inherit;
-      overflow-y: auto;
+    .mode-btn:hover:not(.selected) {
+      background: #d1e6fb;
+      color: #2468ad;
     }
-    .search-input::placeholder { color: #aaa; font-size: 13px; }
-    /* 搜索按钮绝对贴紧检索区右下角 */
-    .search-btn {
-      background: #1677ff; color: #fff; border: none; border-radius: 0 0 12px 0;
-      padding: 0 19px; font-size: 15px; font-weight: 500; cursor: pointer; height: 36px;
-      position: absolute; right: 0; bottom: 0;
-      box-shadow: 0 1px 4px 0 rgba(22,119,255,0.08);
-      display: flex; align-items: center; justify-content: center;
-      z-index: 10;
-      margin: 0;
-      transition: background 0.14s;
-    }
-    .search-btn:active { background: #225db4; }
-    /* 热门标签缩小+底部居中（检索区外，主卡片内） */
-    .hot-tags-wrap {
+    .search-textarea {
       width: 100%;
-      display: flex; flex-direction: column; align-items: center;
-      margin-top: 20px;
+      min-height: 170px;
+      max-height: 260px;
+      resize: vertical;
+      box-sizing: border-box;
+      font-size: 1.16rem;
+      padding: 28px 68px 28px 26px;
+      border: 2px solid #b4d2f5;
+      border-radius: 16px;
+      background: #fff;
+      color: #133a60;
+      outline: none;
+      line-height: 1.7;
+      transition: border 0.2s, box-shadow 0.18s;
+      overflow-y: auto;
+      font-family: 'Segoe UI', '微软雅黑', Arial, sans-serif;
+      word-break: break-all;
+      box-shadow: 0 4px 28px 0 rgba(112,168,235,0.10);
     }
-    .hot-tags {
-      display: flex; justify-content: center; flex-wrap: wrap; gap: 14px;
-      margin-bottom: 4px;
+    .search-textarea:focus {
+      border: 2px solid #46a2ff;
+      background: #fff;
+      box-shadow: 0 8px 32px 0 rgba(70,162,255,0.10);
     }
-    .tag-btn {
-      background: #e6f1ff; color: #1677ff; border: none; border-radius: 8px; padding: 4px 12px;
-      font-size: 13px; cursor: pointer; margin-bottom: 2px;
-      transition: background .11s;
+    .search-btn {
+      position: absolute;
+      bottom: 36px;
+      right: 32px;
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      background: linear-gradient(90deg,#318fff 80%,#6fc7ff 100%);
+      border: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 6px 22px 0 rgba(38,127,255,0.13);
+      cursor: pointer;
+      transition: background 0.14s, box-shadow 0.12s, transform 0.14s;
+      z-index: 2;
     }
-    .tag-btn:hover { background: #c7e3ff; }
-    .search-desc {
-      color: #7a8ca8; font-size: 12px; margin: 10px 0 0 0; text-align: center;
-      width: 100%; letter-spacing: 1px;
+    .search-btn:active {
+      background: #2468ad;
+      transform: scale(0.97);
     }
-    .feature-card {
-      margin: 28px auto 0 auto;
-      background: #f9fbfe;
+    .search-btn svg {
+      width: 25px;
+      height: 25px;
+      fill: #fff;
+    }
+    .optimize-btn {
+      position: absolute;
+      left: 0;
+      bottom: -54px;
+      min-width: 136px;
+      height: 44px;
+      font-size: 1.10rem;
+      border: none;
       border-radius: 12px;
-      padding: 13px 0 6px 0;
-      width: 360px;
+      background: #e4eef8;
+      color: #8ca0b7;
+      font-weight: 500;
+      cursor: not-allowed;
+      box-shadow: 0 2px 8px 0 rgba(128,153,185,0.08);
+      transition: background 0.18s, color 0.14s, box-shadow 0.18s;
+      z-index: 1;
+      letter-spacing: 0.01em;
+      outline: none;
+      opacity: 1;
+      border: 1.2px solid #b4d2f5;
+    }
+    .optimize-btn.enabled {
+      background: linear-gradient(90deg,#eaf5ff 60%,#c5e4ff 100%);
+      color: #1762bb;
+      cursor: pointer;
+      opacity: 1;
+      border: 1.2px solid #71bbf7;
+      box-shadow: 0 4px 12px 0 rgba(54,155,255,0.09);
+    }
+    .optimize-btn:active.enabled {
+      background: #d6eaff;
+    }
+    .tip-row {
+      width: 900px;
+      max-width: 96vw;
+      margin-top: 56px;
       text-align: center;
-      font-size: 14px;
-      color: #4071b3;
-      letter-spacing: 1px;
-      box-shadow: 0 1px 5px 0 rgba(22,119,255,0.04);
+      color: #7c92b1;
+      font-size: 1.13rem;
+      letter-spacing: 0.02em;
+      user-select: none;
+      background: none;
     }
-    .feature-links { margin: 8px 0 0 0; font-size: 13px;}
-    .feature-links a { margin: 0 14px; color: #1677ff; text-decoration: underline;}
-    .footer {
-      margin-top: 45px; width: 100%; background: #27384a; color: #fff;
-      text-align: center; font-size: 15px; letter-spacing: 1.2px; padding: 18px 0 12px 0;
+    @media (max-width: 1100px) {
+      .product-title, .product-desc, .input-area-wrap, .tip-row {width: 98vw; min-width: 0;}
+      .input-area-wrap {padding-left: 1vw; padding-right: 1vw;}
     }
-    @media (max-width: 1200px) {
-      .main-card { width: 99vw;}
-      .search-block, .search-area { width: 99vw !important; }
-    }
-    @media (max-width: 900px) {
-      .main-card, .search-block, .search-area { width: 100vw !important; }
-      .search-area { padding: 16px 1vw 40px 1vw; }
+    @media (max-width: 600px) {
+      .center-main {padding-top: 48px;}
+      .product-title, .product-desc, .tip-row {width: 98vw;}
+      .input-area-wrap {width: 98vw;}
+      .search-btn {right: 10px; bottom: 12px;}
+      .search-textarea {padding: 16px 40px 16px 10px;}
+      .tip-row {font-size: 0.97rem; margin-top: 32px;}
     }
   </style>
 </head>
 <body>
-  <!-- 头部 logo -->
-  <div class="header">
-    <img class="logo" src="https://raw.githubusercontent.com/github/explore/main/topics/openai/openai.png" alt="Logo">
-    <span class="logo-text">WDL</span>
-    <span class="logo-desc">New Academic</span>
-    <button class="school-list-btn">学校列表</button>
-  </div>
-  <div class="main">
-    <div class="title">学术论文智能检索</div>
-    <div class="subtitle">AI语义理解、长文本、复杂命题也能一键高效检索</div>
-    <div class="main-card">
-      <!-- Tab区 -->
-      <div class="card-tab-row">
-        <button class="main-tab active">论文</button>
-        <button class="main-tab">作者</button>
-        <button class="main-tab">机构</button>
-        <button class="main-tab">学科</button>
+  <div class="center-main">
+    <div class="product-title">新学术全球学位论文精选整合服务平台</div>
+    <div class="product-desc">覆盖全球高质量学位论文资源，支持语义检索与一站式发现，助力学术创新与科研突破</div>
+    <div class="input-area-wrap">
+      <div class="mode-switch-row">
+        <button class="mode-btn selected" id="semanticBtn" onclick="setMode('semantic')">语义检索</button>
+        <button class="mode-btn" id="classicBtn" onclick="setMode('classic')">传统检索</button>
       </div>
-      <!-- 检索模式按钮 独立一行、紧贴浅蓝检索区上方 -->
-      <div class="mode-btn-row">
-        <button class="mode-btn active">语义检索</button>
-        <button class="mode-btn">高级检索</button>
-        <button class="mode-btn">常规检索</button>
-      </div>
-      <!-- 浅蓝底检索区 -->
-      <div class="search-block">
-        <div class="search-area" style="position:relative; min-height:80px; padding-bottom:46px;">
-          <span class="search-icon">🔍</span>
-          <textarea class="search-input" placeholder="请输入论文标题、作者、关键词、DOI或用自然语言描述学术需求（可多行输入，支持语义检索）"></textarea>
-          <!-- 搜索按钮绝对贴紧右下角，始终在蓝色区内部 -->
-          <button class="search-btn"
-            style="position:absolute; right:0; bottom:0; border-radius: 0 0 12px 0; height:36px;">搜索</button>
-        </div>
-      </div>
-      <!-- 热门标签区和说明 -->
-      <div class="hot-tags-wrap">
-        <div class="hot-tags">
-          <button class="tag-btn">大模型</button>
-          <button class="tag-btn">AI in Education</button>
-          <button class="tag-btn">量子计算</button>
-          <button class="tag-btn">生物医学</button>
-          <button class="tag-btn">知识图谱</button>
-          <button class="tag-btn">深度学习</button>
-          <button class="tag-btn">可持续发展</button>
-        </div>
-        <div class="search-desc">
-          支持 AND、OR、NOT 多条件布尔检索，支持标题/作者/关键词/DOI/摘要/语义长句 | <a style="color:#1677ff;" href="#">检索说明</a>
-        </div>
-      </div>
-      <!-- 平台说明 -->
-      <div class="feature-card">
-        支持多学科、多语种论文检索，AI自动摘要、PDF一键下载，布尔多条件高级检索等功能。<br>
-        <div class="feature-links">
-          <a href="#">我的收藏</a> | <a href="#">使用帮助</a>
-        </div>
-      </div>
+      <textarea
+        id="searchInput"
+        class="search-textarea"
+        maxlength="2000"
+        placeholder="输入完整研究主题或问题，支持语义检索"
+        rows="7"></textarea>
+      <button class="search-btn" id="searchBtn" title="搜索">
+        <!-- 飞机/发送图标 SVG -->
+        <svg viewBox="0 0 24 24">
+          <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
+        </svg>
+      </button>
+      <button class="optimize-btn" id="optimizeBtn" disabled>优化表达</button>
     </div>
-    <div class="footer">
-      © 2025 WDL New Academic 学术论文智能检索平台 | 北京盈科千信科技有限公司
+    <div class="tip-row">
+      输入完整研究主题或问题进行语义检索，例如‘新能源电池技术进展综述’
     </div>
   </div>
+  <script>
+    // 检索方式切换
+    function setMode(mode) {
+      document.getElementById('semanticBtn').classList.remove('selected');
+      document.getElementById('classicBtn').classList.remove('selected');
+      if (mode === 'semantic') {
+        document.getElementById('semanticBtn').classList.add('selected');
+      } else {
+        document.getElementById('classicBtn').classList.add('selected');
+      }
+    }
+    // 优化表达按钮启用/禁用
+    const searchInput = document.getElementById('searchInput');
+    const optimizeBtn = document.getElementById('optimizeBtn');
+    searchInput.addEventListener('input', function() {
+      if (this.value.trim().length > 0) {
+        optimizeBtn.classList.add('enabled');
+        optimizeBtn.disabled = false;
+        optimizeBtn.style.cursor = "pointer";
+      } else {
+        optimizeBtn.classList.remove('enabled');
+        optimizeBtn.disabled = true;
+        optimizeBtn.style.cursor = "not-allowed";
+      }
+    });
+  </script>
 </body>
 </html>
