--- a/JSLBY.html
+++ b/JSLBY.html
@@ -227,14 +227,14 @@
     }
     .search-send-btn svg { width: 30px; height: 30px;}
     .search-send-btn:hover { background: #f2f8fe; }
+
+    /* ⬇⬇ 关键调整：切换按钮不再绝对定位，进入文档流 */
     .search-type-group {
-      position: absolute;
-      right: 36px;
-      bottom: -64px;
       display: flex;
-      flex-direction: row;
+      justify-content: flex-end;
       gap: 18px;
       z-index: 3;
+      margin-top: 12px; /* 与上方输入区间距 */
     }
     .search-type-btn {
       background: #fff;
@@ -254,11 +254,13 @@
       color: #fff;
       border: 2px solid #176be6;
     }
+
+    /* ⬇⬇ 关键调整：推荐关键词不再预留 88px 的空隙 */
     .search-suggest-row {
       display: flex;
       flex-direction: row;
       align-items: center;
-      margin-top: 88px;
+      margin-top: 18px; /* 原 88px */
       gap: 12px;
       width: 100%;
       white-space: nowrap;
@@ -286,6 +288,44 @@
       flex-shrink: 0;
     }
     .suggest-tag:hover { background: #e7eef9; }
+
+    /* 传统检索（高级检索）内嵌样式 */
+    .classic-adv { display:none; margin-top: 8px; }
+    .adv-wrap {
+      background: #f7fbff;
+      border: 1.5px solid #e0e9f7;
+      border-radius: 12px;
+      padding: 14px 14px 12px;
+    }
+    .adv-head {
+      display:flex; align-items:center; justify-content:space-between; margin-bottom:8px;
+    }
+    .adv-head-title { font-weight:700; color:#176be6; }
+    .adv-tools { display:flex; gap:8px; align-items:center;}
+    .adv-clear, .adv-help {
+      border:none; cursor:pointer; border-radius:8px; height:34px; padding:0 12px; font-weight:600;
+    }
+    .adv-clear { background:#fff1f1; color:#c43c3c; }
+    .adv-help { background:#eef4ff; color:#255fbe; }
+    .adv-row { display:flex; align-items:center; gap:8px; margin:8px 0; }
+    .adv-logic, .adv-field {
+      border:1px solid #dde6f3; border-radius:6px; padding:6px 12px; background:#fff; color:#3269c5;
+      font-size:14px; outline:none;
+    }
+    .adv-logic { min-width:72px; background:#eaf2ff; font-weight:700;}
+    .adv-field { min-width:120px; }
+    .adv-input {
+      flex:1; border:1px solid #dde6f3; border-radius:6px; padding:6px 10px; font-size:14px; background:#fff;
+      outline:none;
+    }
+    .adv-del { border:none; background:none; color:#d73a49; font-size:18px; cursor:pointer; padding:2px 6px; border-radius:6px; }
+    .adv-del:hover { background:#fde8ec; }
+    .adv-add { margin-top:6px; border:none; background:#eaf2ff; color:#1f63c6; padding:8px 12px; border-radius:8px; cursor:pointer; font-weight:700;}
+    .adv-submit {
+      width:100%; margin-top:10px; border:none; background:#176be6; color:#fff; padding:10px 0; border-radius:10px; font-weight:700; cursor:pointer;
+    }
+    .adv-tips { display:none; margin-top:8px; font-size:13px; color:#4273b6; background:#eef6ff; border:1px solid #d8e9ff; padding:8px 10px; border-radius:8px;}
+
     .sort-lang-bar {
       display: flex;
       justify-content: space-between;
@@ -388,7 +428,7 @@
       display: inline-block; border-radius: 10px; overflow: hidden; cursor: pointer; box-shadow: 0 2px 8px #1567e110; transition: box-shadow .13s;
     }
     .img-thumb-wrap:hover { box-shadow: 0 6px 24px #1567e130;}
-    .img-thumb { width: 76px; height: 56px; object-fit: cover; display: block; border-radius: 10px; border: 1px solid #e6e8ee;}
+    .img-thumb { width: 76px; height: 56px; object-fit: cover; display: block; border: 1px solid #e6e8ee;}
     .img-slider { display: flex; overflow-x: auto; gap: 10px; scrollbar-width: thin; max-width: 440px;}
     .img-slider::-webkit-scrollbar { height: 7px; background: #e9f0fa;}
     .img-slider::-webkit-scrollbar-thumb { background: #b7c9ea; border-radius: 6px;}
@@ -556,6 +596,7 @@
           <!-- 检索输入区域 -->
           <div class="search-bar-card">
             <div class="search-input-box">
+              <!-- 语义检索输入 -->
               <textarea class="semantic-input-area"
                 id="semanticSearchInput"
                 rows="3" maxlength="600"
@@ -563,6 +604,27 @@
               <button class="search-send-btn" title="搜索" onclick="alert('检索功能开发中')">
                 <svg viewBox="0 0 32 32"><path d="M5 27L27 16L5 5v7l14 4l-14 4z" fill="#176be6"/></svg>
               </button>
+
+              <!-- 传统检索（高级检索） -->
+              <div class="classic-adv" id="classicAdv">
+                <div class="adv-wrap">
+                  <div class="adv-head">
+                    <div class="adv-head-title">高级检索</div>
+                    <div class="adv-tools">
+                      <button type="button" class="adv-clear" id="advClearBtn">清空</button>
+                      <button type="button" class="adv-help" id="advHelpBtn">说明</button>
+                    </div>
+                  </div>
+                  <div id="advRows"></div>
+                  <button type="button" class="adv-add" id="advAddBtn">+ 添加检索条件</button>
+                  <button class="adv-submit" id="advSubmitBtn">搜索</button>
+                  <div class="adv-tips" id="advTips">
+                    支持字段：标题、作者、关键词、导师、学科、学校、关键信息、摘要、出版年份、语种；逻辑：AND / OR / NOT。
+                  </div>
+                </div>
+              </div>
+
+              <!-- 切换按钮（已进入文档流） -->
               <div class="search-type-group">
                 <button class="search-type-btn active" id="btnSemantic" onclick="switchSearchType(true)">语义检索</button>
                 <button class="search-type-btn" id="btnTraditional" onclick="switchSearchType(false)">传统检索</button>
@@ -737,7 +799,7 @@ const UNIVERSITIES = [
   {name: 'Yale University', count: 1986, py: 'Y'},
   {name: 'Columbia University', count: 1943, py: 'C'},
   {name: 'Princeton University', count: 1821, py: 'P'},
-  {name: 'ETH Zurich', count: 1720, py: 'E'}
+  {name: 'ETH Zurich', count: 1720, py: 'E' }
 ];
 const _PAGE = { lang: 4, subject: 4, country: 4, univ: 4 };
 const _EXPAND = { lang: 8, subject: 8, country: 8, univ: 8 };
@@ -872,11 +934,67 @@ document.getElementById('modalSearch').oninput=function(e){
   renderModal();
 };
 window.switchDegreeTab=switchDegreeTab;
-/* =========== 右侧检索交互 =========== */
+/* =========== 右侧检索交互（语义 / 传统） =========== */
 function switchSearchType(isSemantic){
   document.getElementById('btnSemantic').classList.toggle('active', isSemantic);
   document.getElementById('btnTraditional').classList.toggle('active', !isSemantic);
+  document.getElementById('semanticSearchInput').style.display = isSemantic ? '' : 'none';
+  document.getElementById('suggestRow').style.display = isSemantic ? '' : 'none';
+  document.getElementById('classicAdv').style.display = isSemantic ? 'none' : 'block';
 }
+
+/* ====== 传统检索（高级检索）逻辑 ====== */
+const advFields = [
+  {label:'标题', value:'title'},
+  {label:'作者', value:'author'},
+  {label:'关键词', value:'keyword'},
+  {label:'导师', value:'tutor'},
+  {label:'学科', value:'subject'},
+  {label:'学校', value:'school'},
+  {label:'关键信息', value:'info'},
+  {label:'摘要', value:'abstract'},
+  {label:'出版年份', value:'year'},
+  {label:'语种', value:'language'},
+];
+const advLogics = ['AND','OR','NOT'];
+let advRowsData = [{logic:'AND', field:'title', value:''}];
+
+function renderAdvRows(){
+  const rowsHtml = advRowsData.map((row, idx)=>`
+    <div class="adv-row" data-row="${idx}">
+      <select class="adv-logic">${advLogics.map(l=>`<option value="${l}" ${row.logic===l?'selected':''}>${l}</option>`).join('')}</select>
+      <select class="adv-field">${advFields.map(f=>`<option value="${f.value}" ${row.field===f.value?'selected':''}>${f.label}</option>`).join('')}</select>
+      <input class="adv-input" type="text" value="${row.value||''}" placeholder="请输入检索词">
+      ${advRowsData.length>1?`<button class="adv-del" title="删除">×</button>`:''}
+    </div>
+  `).join('');
+  document.getElementById('advRows').innerHTML = rowsHtml;
+
+  // 绑定事件
+  document.querySelectorAll('#advRows .adv-row').forEach((el, idx)=>{
+    el.querySelector('.adv-logic').onchange = e => advRowsData[idx].logic = e.target.value;
+    el.querySelector('.adv-field').onchange = e => advRowsData[idx].field = e.target.value;
+    el.querySelector('.adv-input').oninput = e => advRowsData[idx].value = e.target.value;
+    const del = el.querySelector('.adv-del');
+    if(del) del.onclick = () => { advRowsData.splice(idx,1); renderAdvRows(); };
+  });
+}
+renderAdvRows();
+
+document.getElementById('advAddBtn').onclick = () => { advRowsData.push({logic:'AND', field:'title', value:''}); renderAdvRows(); };
+document.getElementById('advClearBtn').onclick = () => { advRowsData = [{logic:'AND', field:'title', value:''}]; renderAdvRows(); };
+document.getElementById('advHelpBtn').onclick = () => {
+  const tips = document.getElementById('advTips');
+  tips.style.display = tips.style.display==='block' ? 'none' : 'block';
+};
+document.getElementById('advSubmitBtn').onclick = () => {
+  alert('高级检索条件：\n' + JSON.stringify(advRowsData, null, 2));
+};
+
+/* 默认：语义检索 */
+switchSearchType(true);
+
+/* =========== 论文卡片交互 =========== */
 function showMore(idx) {
   var abs = document.getElementById('abs'+idx);
   abs.classList.add('expanded');
